сервлеты с API